--- a/istio/deployment-product.yaml
+++ b/istio/deployment-product.yaml
@@ -15,7 +15,7 @@ spec:
         image: jamesmedice/product-service
         imagePullPolicy: Never
         ports:
-        - containerPort: 9999
+        - containerPort: 8000
 ---
 apiVersion: v1
 kind: Service
@@ -25,9 +25,9 @@ metadata:
     app: product-service
 spec:
   ports:
-  - port: 9999
-    targetPort: 30500
-    name: http
+  - port: 8000
+    protocol: TCP
   selector:
     app: product-service
+  type: NodePort
 ---
